--- a/MDK-ARM/HAL_AutoTransmission/HAL_AutoTransmission.build_log.htm
+++ b/MDK-ARM/HAL_AutoTransmission/HAL_AutoTransmission.build_log.htm
@@ -28,30 +28,31 @@ Project File Date:  10/25/2019
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'HAL_AutoTransmission'
 assembling startup_stm32f030x8.s...
-compiling main.c...
 compiling gpio.c...
-compiling stm32f0xx_it.c...
+compiling dma.c...
 compiling usart.c...
+compiling main.c...
+compiling stm32f0xx_it.c...
+compiling stm32f0xx_hal_tim.c...
 compiling stm32f0xx_hal_msp.c...
 compiling stm32f0xx_hal_tim_ex.c...
-compiling stm32f0xx_hal_tim.c...
-compiling stm32f0xx_hal_uart_ex.c...
 compiling stm32f0xx_hal_uart.c...
+compiling stm32f0xx_hal_uart_ex.c...
+compiling stm32f0xx_hal_rcc_ex.c...
 compiling stm32f0xx_hal.c...
 compiling stm32f0xx_hal_rcc.c...
-compiling stm32f0xx_hal_rcc_ex.c...
-compiling stm32f0xx_hal_i2c_ex.c...
 compiling stm32f0xx_hal_gpio.c...
-compiling stm32f0xx_hal_i2c.c...
+compiling stm32f0xx_hal_i2c_ex.c...
 compiling stm32f0xx_hal_cortex.c...
 compiling stm32f0xx_hal_dma.c...
-compiling stm32f0xx_hal_pwr.c...
+compiling stm32f0xx_hal_i2c.c...
 compiling stm32f0xx_hal_pwr_ex.c...
+compiling stm32f0xx_hal_pwr.c...
 compiling stm32f0xx_hal_flash.c...
 compiling stm32f0xx_hal_flash_ex.c...
 compiling system_stm32f0xx.c...
 linking...
-Program Size: Code=4872 RO-data=236 RW-data=12 ZI-data=1156  
+Program Size: Code=5532 RO-data=236 RW-data=16 ZI-data=2072  
 FromELF: creating hex file...
 "HAL_AutoTransmission\HAL_AutoTransmission.axf" - 0 Error(s), 0 Warning(s).
 
